crates/album/tests/snapshots/contract__verb_add_fresh.snap
---
source: crates/album/tests/contract.rs
expression: pretty(&fresh)
---
{
  "core": "album",
  "data": {
    "closeness": "close"
  },
  "home": "csa",
  "kind": "person",
  "refs": [],
  "slug": "john_appleseed"
}
