crates/album/tests/snapshots/contract__verb_add_overwrite_applied.snap
---
source: crates/album/tests/contract.rs
expression: pretty(&applied)
---
{
  "core": "album",
  "data": {
    "role": "friend"
  },
  "home": "csa",
  "kind": "person",
  "refs": [],
  "slug": "john_appleseed"
}
