crates/album/tests/snapshots/contract__verb_edit.snap
---
source: crates/album/tests/contract.rs
expression: pretty(&edited)
---
{
  "core": "album",
  "data": {
    "origin": "a job fair",
    "role": "employer"
  },
  "home": "csa",
  "kind": "person",
  "refs": [],
  "slug": "dare_robotics"
}
