crates/album/tests/snapshots/contract__verb_move.snap
---
source: crates/album/tests/contract.rs
expression: pretty(&moved)
---
{
  "moved": {
    "from": "csa",
    "to": "cso"
  },
  "record": {
    "core": "album",
    "data": {},
    "home": "cso",
    "kind": "person",
    "refs": [],
    "slug": "alex"
  }
}
