crates/album/tests/snapshots/contract__verb_rm.snap
---
source: crates/album/tests/contract.rs
expression: pretty(&deleted)
---
{
  "deleted": "alex"
}
